--- a/.SpaceVim.d/init.toml
+++ b/.SpaceVim.d/init.toml
@@ -8,23 +8,14 @@
 
 # All SpaceVim option below [option] section
 [options]
-    # set spacevim theme. by default colorscheme layer is not loaded,
-    # if you want to use more colorscheme, please load the colorscheme
-    # layer
     colorscheme = "one"
     colorscheme_bg = "dark"
-    # Disable guicolors in basic mode, many terminal do not support 24bit
-    # true colors
     enable_guicolors = true
-    # Disable statusline separator, if you want to use other value, please
-    # install nerd fonts
-    statusline_separator = "arrow"
-    statusline_inactive_separator = "arrow"
+    statusline_separator = "nil"
+    statusline_inactive_separator = "nil"
     buffer_index_type = 4
     enable_tabline_filetype_icon = true
-    enable_statusline_mode = false
     relativenumber = false
-    #filemanager = "nerdtree"
     filetree_direction = 'left'
     lint_on_save = 0
 
