--- a/.skhdrc
+++ b/.skhdrc
@@ -1,18 +1,18 @@
 # the default mode
 :: default : echo "" > /tmp/current_skhd_mode;\
-             open -g "bitbar://refreshPlugin?name=skhd_mode.*?.sh"
+             open -g "hammerspoon://skhd_mode"
 
 # a mode for focus operations
 :: focus @ : echo "focus" > /tmp/current_skhd_mode;\
-             open -g "bitbar://refreshPlugin?name=skhd_mode.*?.sh"
+             open -g "hammerspoon://skhd_mode?mode=focus"
 
 # a mode for warp operations
 :: warp @ : echo "warp" > /tmp/current_skhd_mode;\
-            open -g "bitbar://refreshPlugin?name=skhd_mode.*?.sh"
+            open -g "hammerspoon://skhd_mode?mode=warp"
 
 # a mode for resizing operations
 :: resize @ : echo "resize" > /tmp/current_skhd_mode;\
-              open -g "bitbar://refreshPlugin?name=skhd_mode.*?.sh"
+              open -g "hammerspoon://skhd_mode?mode=resize"
 
 # enter and exit modes
 default                      < shift - space      ; focus
@@ -58,9 +58,9 @@ focus, resize, warp < q                     :  yabai -m space --balance         
 
 # change layout of desktop: m ,
 focus, resize, warp < m                     :  yabai -m space --layout bsp;\
-                                               open -g "bitbar://refreshPlugin?name=yabai_layout.*?.sh"
+                                               open -g "hammerspoon://cmenu"
 focus, resize, warp < 0x2B                  :  yabai -m space --layout float;\
-                                               open -g "bitbar://refreshPlugin?name=yabai_layout.*?.sh"
+                                               open -g "hammerspoon://cmenu"
 
 # Turn on and off FFM: .
 focus, resize, warp < 0x2F                  :  yabai -m config focus_follows_mouse          autofocus
