--- a/.yabairc
+++ b/.yabairc
@@ -24,5 +24,10 @@ yabai -m config left_padding                 10
 yabai -m config right_padding                10
 yabai -m config window_gap                   10
 
+yabai -m config window_border                on
+yabai -m config window_border_width          1
+yabai -m config active_window_border_color   0xffd19a66
+yabai -m config normal_window_border_color   0xff505050
+
 echo "yabai configuration loaded.."
 
