--- a/.yabairc
+++ b/.yabairc
@@ -6,7 +6,6 @@ yabai -m config focus_follows_mouse          off
 yabai -m config window_placement             second_child
 yabai -m config window_topmost               off
 yabai -m config window_opacity               on
-yabai -m config window_opacity_duration      0.1
 yabai -m config window_shadow                off
 yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        1.00
@@ -28,6 +27,29 @@ yabai -m config window_border                on
 yabai -m config window_border_width          1
 yabai -m config active_window_border_color   0xffd19a66
 yabai -m config normal_window_border_color   0xff505050
+
+yabai -m space 1 --label email
+yabai -m rule --add app="Thunderbird" space=^"email"
+
+yabai -m space 2 --label messenger
+yabai -m rule --add app="Ferdi" space=^"messenger"
+
+yabai -m space 3 --label browser
+yabai -m rule --add app="Firefox" space=^"browser"
+yabai -m rule --add app="Firefox Developer Edition" space=^"browser"
+yabai -m rule --add app="Google Chrome" space=^"browser"
+yabai -m rule --add app="Safari" space=^"browser"
+
+yabai -m space 4 --label editor
+yabai -m rule --add app="Atom" space=^"editor"
+
+
+
+yabai -m space 10 --label media
+yabai -m rule --add app="Plex" space=^"media"
+yabai -m rule --add app="VLC" space=^"media"
+yabai -m rule --add app="Spotify" space=^"media"
+
 
 echo "yabai configuration loaded.."
 
