--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,11 +9,12 @@ rounded-corners-exclude = [
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
+  "class_g = 'lattedock'",
+  #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  #"class_g = 'firefox'",
+  #"class_g = 'Thunderbird'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -27,12 +28,12 @@ round-borders-exclude = [
 # example:
 #    round-borders-rule = [ "2:class_g = 'URxvt'" ];
 #
-round-borders-rule = [
-  "3:class_g      = 'XTerm'",
-  "3:class_g      = 'URxvt'",
-  "10:class_g     = 'Alacritty'",
-  "15:class_g     = 'Signal'"
-];
+#round-borders-rule = [
+#  "3:class_g      = 'XTerm'",
+#  "3:class_g      = 'URxvt'",
+#  "10:class_g     = 'Alacritty'",
+#  "15:class_g     = 'Signal'"
+#];
 
 #################################
 #             Shadows           #
